--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: php-redis
-        image: gcr.io/google-samples/gb-frontend:v4
+        image: tcsantos/guestbook
         resources:
           requests:
             cpu: 100m
